test_scripts/errors/divide_type_error.stderr
 1 | "a" / 2;
         ^
Error: Operation '/' not supported between a and 2
